# add api directories

# ctp api
# ------------------------------------------------------------------------------
set(EXECUTABLE_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH}/ctp)
set(LIBRARY_OUTPUT_PATH ${LIBRARY_OUTPUT_PATH}/ctp)
add_subdirectory(ctp)
# ------------------------------------------------------------------------------

# sec api
# ------------------------------------------------------------------------------
# set(EXECUTABLE_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH}/../sec)
# set(LIBRARY_OUTPUT_PATH ${LIBRARY_OUTPUT_PATH}/../sec)
# add_subdirectory(sec)
# ------------------------------------------------------------------------------

# more apis
